apps/mirotalk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mirotalk
  labels:
    istio-injection: enabled
