apps/mirotalk/mirotalk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirotalk
  namespace: mirotalk
spec:
  selector:
    matchLabels:
      app: mirotalk
  template:
    metadata:
      labels:
        app: mirotalk
    spec:
      containers:
        - name: mirotalk
          image: mirotalk/sfu
#          resources:
#            requests:
#              cpu: 50m
#            limits:
#              cpu: 100m
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: mirotalk
              mountPath: mirotalksfu/app/src/config.js
              subPath: config.js
              readOnly: true
      volumes:
        - name: mirotalk
          configMap:
            name: mirotalk
---
apiVersion: v1
kind: Service
metadata:
  name: mirotalk
  namespace: mirotalk
spec:
  selector:
    app: mirotalk
  ports:
    - protocol: TCP
      port: 3010
