apps/mirotalk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirotalk
  namespace: mirotalk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - talk.tmem.de
      secretName: mirotalk-tls
  rules:
    - host: talk.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mirotalk
                port:
                  number: 3010
